--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -8,8 +8,8 @@ jobs:
   hello:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: ./
         with:
-          gh-token: ${{ secrets.GH_TOKEN }}
+          gh-token: ${{ secrets.GITHUB_TOKEN }}
           label: 'needs-review'
